crates/strider-analyze/tests/snapshots/v3__arm__calls__mutual_b.snap
---
source: crates/strider-analyze/tests/v3_baseline.rs
assertion_line: 177
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v2" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v2" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v3" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v3" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "5" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "v3" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "6" -> "5" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "7" -> "5" [color="#88cc88", label=r0, fontcolor="#cccccc", fontsize=9];
  "7" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "8" -> "5" [color="#88cc88", label=r1, fontcolor="#cccccc", fontsize=9];
  "9" -> "5" [color="#88cc88", label=d0, fontcolor="#cccccc", fontsize=9];
  "10" -> "5" [color="#88cc88", label=d1, fontcolor="#cccccc", fontsize=9];
  "10" [label="init\nd1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "9" [label="init\nd0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "8" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "6" [label="MemUnion", shape=trapezium, fillcolor="#3a1a4a"];
  "11" -> "6" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "11" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "12" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "v2" -> "12" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "13" -> "12" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "14" -> "12" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "14" [label="const 0x5ec:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "15" -> "12" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "8" -> "12" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "16" -> "12" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "17" -> "12" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "18" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "12" -> "18" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "12" -> "18" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "19" -> "18" [color="#88cc88", label=r0, fontcolor="#cccccc", fontsize=9];
  "v20" [label="Post Call\nr1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "12" -> "v20" [color="#888888", style=dashed];
  "v20" -> "18" [color="#88cc88", label=r1, fontcolor="#cccccc", fontsize=9];
  "v21" [label="Post Call\nd0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "12" -> "v21" [color="#888888", style=dashed];
  "v21" -> "18" [color="#88cc88", label=d0, fontcolor="#cccccc", fontsize=9];
  "v22" [label="Post Call\nd1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "12" -> "v22" [color="#888888", style=dashed];
  "v22" -> "18" [color="#88cc88", label=d1, fontcolor="#cccccc", fontsize=9];
  "19" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "v23" [label="Post Call\nr0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "12" -> "v23" [color="#888888", style=dashed];
  "v23" -> "19" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "24" -> "19" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "24" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "17" [label="init\nlr", shape=Mdiamond, fillcolor="#1a3a5c"];
  "16" [label="init\nr4", shape=Mdiamond, fillcolor="#1a3a5c"];
  "15" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "25" -> "15" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "26" -> "15" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "26" [label="const 0xffffffff:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "25" [label="init\nr0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "13" [label="MemUnion", shape=trapezium, fillcolor="#3a1a4a"];
  "27" -> "13" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "27" [label="StackStore u32\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "28" -> "27" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v29" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v29" -> "27" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "16" -> "27" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "28" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "30" -> "28" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v31" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v31" -> "28" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "17" -> "28" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "30" [label="MemPartition[MemPartitionId(0)]", shape=trapezium, fillcolor="#3a1a4a"];
  "11" -> "30" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "4" [label="And:bool", shape=box, fillcolor="#2d2d2d"];
  "32" -> "4" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "33" -> "4" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "33" [label="Equal\nu8 → bool", shape=box, fillcolor="#2d2d2d"];
  "34" -> "33" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "35" -> "33" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "35" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "36" -> "35" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "36" [label="Sborrow\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "25" -> "36" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "37" -> "36" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "37" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "34" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "38" -> "34" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "38" [label="Sless\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "25" -> "38" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "39" -> "38" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "39" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "32" [label="Neg:bool", shape=box, fillcolor="#2d2d2d"];
  "40" -> "32" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "40" [label="Equal\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "25" -> "40" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "41" -> "40" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "41" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
}
